test/golden/cidr-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "my-app-network-policy"
spec:
  endpointSelector:
    matchLabels:
      app: "my-app"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: "kube-system"
            k8s-app: "kube-dns"
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSets:
          cidr: 0.0.0.0/0 # Internet
          except: 10.0.0.0/8 # Internal network

    - toCIDRSets:
          cidr: 10.147.128.0/24 # MySQL
      toPorts:
          - ports:
              - port: 3306
                protocol: TCP
    - toCIDRSets:
          cidr: 10.23.32.0/24 # Integrations
          cidr: 10.23.31.0/24 # Internal shenanigans

    - toCIDRSets:
          cidr: 10.42.42.0/24 # NTP
      toPorts:
          - ports:
              - port: 123
                protocol: UDP
